[package]
name = "password_cracker"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.9"
md-5 = "0.10.1"
sha1 = "0.10"
num_cpus = "1.13"
hex = "0.4"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"




